[Releng] Installing results of a step in TP
- Updating zip files names
- Adding workspace clean in all steps

Change-Id: Id036809e3944789ba934df97c17476aab35c96de
Signed-off-by: Boubekeur Zendagui <boubekeur.zendagui@obeo.fr>