@@ -294,15 +294,27 @@ This file was generated by Eclipse EGF
 	
 	<target name="all" depends="Download_TP,model,introspector,rotative-image,modeler,gendoc,Packaging_All_in_one,Clean" />
 	<target name="Download_TP" depends="Download_TP_CleanStep_1,Download_TP_download_TP" />
-	<target name="model" depends="model_model,model_Publish_Platform_Model,model_Platform_Model" />
-	<target name="introspector" depends="introspector_introspector,introspector_Publish_Platform_Introspector,introspector_Publish_Platform_Introspector_UI,introspector_Aggregate_Platform_Introspector,introspector_Platform_Introspector" />
-	<target name="rotative-image" depends="rotative-image_rotative-image,rotative-image_Publish_Rotative_Image" />
-	<target name="modeler" depends="modeler_modeler,modeler_Publish_Platform_Modeler,modeler_Platform_Modeler" />
-	<target name="gendoc" depends="gendoc_gendoc,gendoc_Publish_Platform_GenDoc_,gendoc_Publish_Platform_GenDoc_UI,gendoc_Aggregate_Platform_DocGen,gendoc_Platform_DocGen" />
+	<target name="model" depends="model_model,model_Publish_Platform_Model,model_install.model,model_Platform_Model" />
+	<target name="introspector" depends="introspector_clean.workspace,introspector_introspector,introspector_Publish_Platform_Introspector,introspector_Publish_Platform_Introspector_UI,introspector_install.introspector,introspector_Aggregate_Platform_Introspector,introspector_Platform_Introspector" />
+	<target name="rotative-image" depends="rotative-image_clean.workspace,rotative-image_rotative-image,rotative-image_Publish_Rotative_Image,rotative-image_install.rotative-image" />
+	<target name="modeler" depends="modeler_clean.workspace,modeler_modeler,modeler_Publish_Platform_Modeler,modeler_install.modeler,modeler_Platform_Modeler" />
+	<target name="gendoc" depends="gendoc_clean.workspace,gendoc_gendoc,gendoc_Publish_Platform_GenDoc_,gendoc_Publish_Platform_GenDoc_UI,gendoc_Aggregate_Platform_DocGen,gendoc_install.docgen,gendoc_Platform_DocGen" />
 	<target name="Packaging_All_in_one" depends="Packaging_All_in_one_All_in_one,Packaging_All_in_one_All_in_One" />
 	<target name="Clean" depends="Clean_Delete_TP_files,Clean_Delete_TP_folder,Clean_Delete_Packaging_Platform_DocGen" />
 	<target name="Download_TP_CleanStep_1" >
 		<antcall target="clean.result" />
+	</target>
+	<target name="introspector_clean.workspace" >
+		<antcall target="clean.workspace" />
+	</target>
+	<target name="rotative-image_clean.workspace" >
+		<antcall target="clean.workspace" />
+	</target>
+	<target name="modeler_clean.workspace" >
+		<antcall target="clean.workspace" />
+	</target>
+	<target name="gendoc_clean.workspace" >
+		<antcall target="clean.workspace" />
 	</target>
     <target name="model_model" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
@@ -855,6 +867,164 @@ This file was generated by Eclipse EGF
 			</source>
 		</p2.mirror>
 	</target>
+	<target name="model_install.model" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.pdt.metamodel.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.pdt.metamodel.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="introspector_install.introspector" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.pdt.introspector.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.pdt.introspector.ui.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.pdt.introspector.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.pdt.introspector.ui.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="rotative-image_install.rotative-image" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.common.sirius.extension.rotativeimage.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.common.sirius.extension.rotativeimage.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="modeler_install.modeler" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.pdt.modeler.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.pdt.modeler.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="gendoc_install.docgen" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.pdt.docgen.ui.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.pdt.docgen.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.pdt.docgen.ui.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.pdt.docgen.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="Clean_Delete_TP_files" depends="init">
 		<delete  >
 			<fileset file="${publish}/TP.tar.gz"/>			<fileset file="${publish}/TP.tar"/>			<fileset file="${publish}/TP.ts"/>
@@ -886,25 +1056,25 @@ This file was generated by Eclipse EGF
 	</target>
 
 	<target name="model_Platform_Model" depends="init">
-		<zip destfile="${publish}/platformModel-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.metamodel.feature/site.p2"  >
+		<zip destfile="${publish}/PDTTooling_Model-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.metamodel.feature/site.p2"  >
 
 		</zip>
 	</target>
 
 	<target name="introspector_Platform_Introspector" depends="init">
-		<zip destfile="${publish}/platformIntrospector-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.introspector.packaging/site.p2"  >
+		<zip destfile="${publish}/PDTTooling_Introspector-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.introspector.packaging/site.p2"  >
 
 		</zip>
 	</target>
 
 	<target name="modeler_Platform_Modeler" depends="init">
-		<zip destfile="${publish}/platformModeler-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.modeler.feature/site.p2"  >
+		<zip destfile="${publish}/PDTTooling_Modeler-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.modeler.feature/site.p2"  >
 
 		</zip>
 	</target>
 
 	<target name="gendoc_Platform_DocGen" depends="init">
-		<zip destfile="${publish}/platformDocGen-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.docgen.packaging/site.p2"  >
+		<zip destfile="${publish}/PDTTooling_DocGen-updateSite-${Kitalpha_Version}_${timestamp}-nosrc.zip" basedir="${publish}/org.polarsys.kitalpha.pdt.docgen.packaging/site.p2"  >
 
 		</zip>
 	</target>
